# quaternion

./: .gitignore  Makefile  README.md
docs/: about.rst  build.rst  conf.py  image.rst  index.rst
scripts/: imgconv.py
src/: CMakeLists.txt  Makefile  api.cpp  image.cpp  main.cpp  mesh.cpp  preprocess.cpp  quaternion.hpp  render.cpp  utils.cpp
tests/: Makefile  main.cpp
